<resources>
    <string name="app_name">Task Planner</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="profile">Profile Url</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="invalid_email_address">Invalid email address</string>

    <string-array name="task_status">
        <item>To-do</item>
        <item>Started</item>
        <item>Completed</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>